<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="2dp"
    android:paddingTop="8dp"
    android:clipToPadding="false"
    android:transitionName="newTaskFormTransition"
    android:background="?android:colorBackground"

    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/new_task_card_view"

        android:transitionName="@string/taskFormCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <ImageButton
                android:id="@+id/close_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/min_icon_target_padding"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/close_new_task_content_desc"
                android:background="?attr/actionBarItemBackground"
                app:srcCompat="@drawable/ic_back_24"
                app:tint="@color/gray" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_touch_target_size"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toStartOf="@id/save_icon"
                app:layout_constraintStart_toEndOf="@id/close_icon"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <ImageButton
                android:id="@+id/save_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/min_icon_target_padding"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/close_new_task_content_desc"
                android:background="?attr/actionBarItemBackground"
                app:srcCompat="@drawable/ic_save_24"
                app:tint="@color/secondary" />

            <ImageView
                android:id="@+id/name_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/divider"
                app:backgroundTint="@color/gray" />


            <TextView
                android:id="@+id/deadline_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/name_divider"
                />
            <CalendarView
                android:id="@+id/deadline_calendar_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/deadline_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/deadline_calendar_view"
                />
            <RadioGroup
                android:id="@+id/status_radio_group"
                android:checkedButton="@+id/onprogress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/status_label">
                <RadioButton
                    android:id="@+id/onprogress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onProgress"/>
                <RadioButton
                    android:layout_marginStart="10dp"
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"/>
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>